# Agentic-ETH--Qawakun

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  context-img.md  context.md
Frame/: .env.example  README.md  package-lock.json  package.json
Frame/src/: middleware.ts
Frame/src/app/: app.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
Frame/src/app/.well-known/farcaster.json/: route.ts
Frame/src/app/api/auth/token/: route.ts
Frame/src/app/api/context/: route.ts
Frame/src/app/api/game-options/: route.ts
Frame/src/app/api/interactive/: route.ts
Frame/src/app/api/middleware/: auth.ts
Frame/src/app/api/nft-claim/: route.ts
Frame/src/app/api/proposal/: route.ts
Frame/src/app/api/proposal/vote/: route.ts
Frame/src/app/api/proposalssc/: route.ts
Frame/src/app/api/proposalsw/: route.ts
Frame/src/app/api/utils/: auth.ts
Frame/src/app/context-manager/: page.tsx
Frame/src/app/dashboard/: page.tsx
Frame/src/app/frames/hello/: client-page.tsx  page.tsx
Frame/src/app/frames/hello/[name]/: client-page.tsx  page.tsx
Frame/src/app/proposals/: page.tsx
Frame/src/app/utils/: auth.ts  clientAuth.ts
Frame/src/components/: Demo.tsx  GameboyInterface.tsx  ProposalsView.tsx
Frame/src/data/: gameOptions.json
Frame/src/lib/: auth.ts
Frame/src/middleware/: authMiddleware.ts
Frame/src/types/: interfaces.ts  next.d.ts
contracts/: ProposalVoting.sol
src/: main.rs
src/api/: auth.rs  game_options.rs  handlers.rs  mod.rs  nft_claim.rs  proposals.rs
src/api/cdp/: nfts.rs
src/api/cdp/abi/: nft_contract_abi.json  proposal_contract_abi.json
src/api/cdp/contracts/: qawakun.sol
src/data/: default_game_options.json
src/farcaster/: auth.rs  cast.rs  mod.rs
src/openai_methods/: get_image.rs  get_text.rs  get_vector.rs  mod.rs
src/twitter/: client.rs  handlers.rs  mod.rs  stream.rs
