[package]
name = "tu_proyecto"
version = "0.1.0"
edition = "2021"
default-run = "tu_proyecto"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
chrono = "0.4.24"
base64 = "0.21"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
twitter-v2 = "0.1.8"
url = "2.2"
lazy_static = "1.4"
regex = "1.5"
anyhow = "1.0"
async-std = "1.12"
hex = "0.4"
ethers ="2.0.13"
k256 = "0.13"
